<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0092b7"
    android:backgroundTint="#0092b7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fc932d"
        android:text="Censo DAM 2023"
        android:textColor="#fc932d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#49a5e3"
        android:text="Formulario Registro"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="#49a5e3"
        android:text="Apellidos y Nombres"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#49a5e3"
        android:text="Correo Electronico"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#49a5e3"
        android:text="Clave"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#49a5e3"
        android:text="Telefono de Contacto"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#49a5e3"
        android:text="Fecha de Nacimiento (Fecha)"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#49a5e3"
        android:text="Hora de nacimiento"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#49a5e3"
        android:text="Zona de Residencia "
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTime"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#49a5e3"
        android:text="¿Cuántas personas viven en la vivienda? (Enteros)"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#49a5e3"
        android:text="Ingreso (Sueldo) Promedio de la Familia (Decimales)"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberSigned"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSigned" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#49a5e3"
        android:text="¿Que opina sobre los bonos otorgados por el gobierno? (Multilinea)"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:drawableRight="@drawable/baseline_email_24"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#49a5e3"
        android:text="Mascotas que viven en casa"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_key_24"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_date_range_24"
        android:ems="10"
        android:inputType="date"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_access_time_filled_24"
        android:ems="10"
        android:inputType="time"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/radioButton_urbano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_Urbano"
            android:textSize="10sp" />

        <RadioButton
            android:id="@+id/radioButton_rural"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RadioButton_Rural"
            android:textSize="10sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextNumberSigned"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <CheckBox
            android:id="@+id/Checkboxgato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Checkbox_gato"
            android:textSize="8sp" />

        <CheckBox
            android:id="@+id/Checkbox_perro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Checkbox_perro"
            android:textSize="8sp" />

        <CheckBox
            android:id="@+id/Checkbox_pollo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Checkbox_pollo"
            android:textSize="8sp" />

        <CheckBox
            android:id="@+id/Checkbox_pato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Checkbox_pato"
            android:textSize="8sp" />

        <CheckBox
            android:id="@+id/Checkbox_otros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Checkbox_otros"
            android:textSize="8sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button_Enviar"
        android:layout_width="131dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/baseline_send_24"
        android:text="@string/Button_Enviar"
        android:textColor="#fc932d"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

</androidx.constraintlayout.widget.ConstraintLayout>